--- a/client/src/app/modules/quotation/components/provision-list/provision-list.component.html
+++ b/client/src/app/modules/quotation/components/provision-list/provision-list.component.html
@@ -1,4 +1,4 @@
-<div class="mat-elevation-z2 form-div" [ngClass]="{'min-height':!isForDashboard && !isForTiersIntegration}">
+<div class="mat-elevation-z2 form-div" [ngClass]="{'min-height':!isForDashboard }">
   <div class=" full-width">
     <table class="full-width table-fixed-layout" *ngIf="!isForDashboard && affaireSearch && !isForTiersIntegration">
       <tr>
