--- a/client/src/app/modules/administration/components/constant/constant.component.html
+++ b/client/src/app/modules/administration/components/constant/constant.component.html
@@ -310,6 +310,14 @@
           </tr>
           <tr>
             <td>
+              <autocomplete-billing-type [(model)]="constant.billingTypeBaloNormalization"
+                label="Type de poste de facturation - Frais de normalisation BALO" [form]="constantForm"
+                propertyName="billingTypeBaloNormalization" [isMandatory]="true" [isDisabled]="!editMode">
+              </autocomplete-billing-type>
+            </td>
+          </tr>
+          <tr>
+            <td>
               <autocomplete-billing-type [(model)]="constant.billingTypePublicationReceipt"
                 label="Type de poste de facturation - Journal justificatif PDF" [form]="constantForm"
                 propertyName="billingTypePublicationReceipt" [isMandatory]="true" [isDisabled]="!editMode">
