--- a/client/src/app/modules/quotation/components/provision-options/provision-options.component.html
+++ b/client/src/app/modules/quotation/components/provision-options/provision-options.component.html
@@ -30,6 +30,13 @@
               (onToggleChange)="provisionChangeFunction()" propertyName="isBaloPackage"></generic-toggle>
           </td>
         </tr>
+        <tr *ngIf="displayOption(billingTypeBaloNormalization)">
+          <td>
+            <generic-toggle [(model)]="provision.isBaloNormalization" label="Frais de normalisation BALO ?"
+              [form]="optionForm" (onToggleChange)="provisionChangeFunction()"
+              propertyName="isBaloNormalization"></generic-toggle>
+          </td>
+        </tr>
         <tr *ngIf="displayOption(billingTypeBaloPublicationFlag)">
           <td>
             <generic-toggle [(model)]="provision.isBaloPackage" label="Justificatif numérique BALO ?"
