--- a/client/src/app/modules/quotation/components/quotation/quotation.component.html
+++ b/client/src/app/modules/quotation/components/quotation/quotation.component.html
@@ -136,8 +136,10 @@
                 <mat-tab *ngFor="let asso of quotation.assoAffaireOrders">
                   <ng-template mat-tab-label>
                     {{asso.affaire.denomination?asso.affaire.denomination:(asso.affaire.firstname + ' ' +
-                    asso.affaire.lastname)}} - {{asso.affaire.city.label}} <mat-icon matTooltip="Supprimer l'affaire"
-                      (click)="deleteAffaire(asso.affaire);$event.stopPropagation();" class="pointer">delete</mat-icon>
+                    asso.affaire.lastname)}} {{asso.affaire.city ? ('- ' + asso.affaire.city.label) : ''}}
+                    <mat-icon matTooltip="Supprimer l'affaire"
+                      (click)="deleteAffaire(asso.affaire);$event.stopPropagation();" class="pointer">delete
+                    </mat-icon>
                   </ng-template>
                   <div class="mat-accordion-container full-width">
                     <mat-accordion multi>
