--- a/client/src/app/modules/administration/components/constant/constant.component.html
+++ b/client/src/app/modules/administration/components/constant/constant.component.html
@@ -458,7 +458,7 @@
           <tr>
             <td>
               <autocomplete-billing-type [(model)]="constant.billingTypeChronopostFees"
-                label="Type de poste de facturation - Frais de Chronopost" [form]="constantForm"
+                label="Type de poste de facturation - Frais de ports" [form]="constantForm"
                 propertyName="billingTypeChronopostFees" [isMandatory]="true" [isDisabled]="!editMode">
               </autocomplete-billing-type>
             </td>
@@ -474,7 +474,7 @@
           <tr>
             <td>
               <autocomplete-billing-type [(model)]="constant.billingTypeShippingCosts"
-                label="Type de poste de facturation - Frais de ports" [form]="constantForm"
+                label="Type de poste de facturation - Frais de ports du confrère" [form]="constantForm"
                 propertyName="billingTypeShippingCosts" [isMandatory]="true" [isDisabled]="!editMode">
               </autocomplete-billing-type>
             </td>
