--- a/client/src/app/modules/quotation/components/provision-options/provision-options.component.html
+++ b/client/src/app/modules/quotation/components/provision-options/provision-options.component.html
@@ -39,7 +39,7 @@
         </tr>
         <tr *ngIf="displayOption(billingTypeBaloPublicationFlag)">
           <td>
-            <generic-toggle [(model)]="provision.isBaloPackage" label="Justificatif numérique BALO ?"
+            <generic-toggle [(model)]="provision.isBaloPublicationFlag" label="Justificatif numérique BALO ?"
               [form]="optionForm" (onToggleChange)="provisionChangeFunction()"
               propertyName="isBaloPublicationFlag"></generic-toggle>
           </td>
@@ -167,7 +167,7 @@
         </tr>
         <tr *ngIf="displayOption(billingTypeChronopostFees)">
           <td>
-            <generic-toggle [(model)]="provision.isChronopostFees" label="Frais de Chronopost ?" [form]="optionForm"
+            <generic-toggle [(model)]="provision.isChronopostFees" label="Frais de ports ?" [form]="optionForm"
               (onToggleChange)="provisionChangeFunction()" propertyName="isChronopostFees"></generic-toggle>
           </td>
         </tr>
