--- a/client/src/app/modules/quotation/components/invoice-management/invoice-management.component.html
+++ b/client/src/app/modules/quotation/components/invoice-management/invoice-management.component.html
@@ -170,7 +170,7 @@
             Acompte n°{{deposit.id}} - {{deposit.label}}
           </td>
           <td class="td-price mat-cell">
-            - {{deposit.depositAmount|number}} €
+            - {{deposit.depositAmount|number}} € (montant du paiement : {{deposit.originPayment.paymentAmount}} €)
           </td>
         </tr>
       </ng-container>
