--- a/client/src/app/modules/quotation/components/quotation/quotation.component.css
+++ b/client/src/app/modules/quotation/components/quotation/quotation.component.css
@@ -2,6 +2,11 @@
   text-align: center;
 }
 
+.table-wrapper {
+  max-height: 200px;
+  overflow-y: scroll;
+  border: 1px solid #ccc;
+}
 .row-field-container {
   padding-top: 15px;
 }
