--- a/client/src/app/modules/invoicing/components/invoice-payment-table/invoice-payment-table.component.html
+++ b/client/src/app/modules/invoicing/components/invoice-payment-table/invoice-payment-table.component.html
@@ -16,10 +16,11 @@
   <ng-container *ngIf="invoice.deposits && invoice.deposits.length>0 ">
     <tr class="mat-row" *ngFor="let deposit of invoice.deposits">
       <td class="mat-cell">
-        N°{{deposit.id}} du {{formatDate(deposit.depositDate)}} - {{deposit.label}}
+        N°{{deposit.id}} du {{formatDate(deposit.depositDate)}} - {{deposit.label}} - montant du paiement :
+        {{deposit.originPayment.paymentAmount}} €
       </td>
       <td class="td-price mat-cell">
-        {{deposit.depositAmount}} € (montant du paiement : {{deposit.originPayment.paymentAmount}} €)
+        {{deposit.depositAmount}} €
       </td>
     </tr>
   </ng-container>
