--- a/client/src/app/modules/quotation/components/invoice-management/invoice-management.component.html
+++ b/client/src/app/modules/quotation/components/invoice-management/invoice-management.component.html
@@ -167,20 +167,22 @@
       <ng-container *ngIf="instanceOfCustomerOrderFn(quotation) && getCurrentInvoiceForCustomerOrder()==undefined">
         <tr class="mat-row" *ngFor="let deposit of quotation.deposits">
           <td class="mat-cell">
-            Acompte n°{{deposit.id}} - {{deposit.label}}
+            Acompte n°{{deposit.id}} - {{deposit.label}} - montant du paiement : {{deposit.originPayment.paymentAmount}}
+            €
           </td>
           <td class="td-price mat-cell">
-            - {{deposit.depositAmount|number}} € (montant du paiement : {{deposit.originPayment.paymentAmount}} €)
+            - {{deposit.depositAmount|number}} €
           </td>
         </tr>
       </ng-container>
       <ng-container *ngIf="instanceOfCustomerOrderFn(quotation) && getCurrentInvoiceForCustomerOrder()!=undefined">
         <tr class="mat-row" *ngFor="let deposit of quotation.deposits">
           <td class="mat-cell">
-            Acompte n°{{deposit.id}} - {{deposit.label}}
+            Acompte n°{{deposit.id}} - {{deposit.label}} - montant du paiement : {{deposit.originPayment.paymentAmount}}
+            €
           </td>
           <td class="td-price mat-cell">
-            - {{deposit.depositAmount|number}} € (montant du paiement : {{deposit.originPayment.paymentAmount}} €)
+            - {{deposit.depositAmount|number}} €
           </td>
         </tr>
       </ng-container>
