--- a/client/src/app/routing/sidenav-list/sidenav-list.component.html
+++ b/client/src/app/routing/sidenav-list/sidenav-list.component.html
@@ -33,6 +33,10 @@
     [ngClass]="{'menu-item-active':getCurrentRoute().indexOf('/administration/competent/authority' )>=0}">
     <mat-icon>gavel</mat-icon> <span>Autorités compétentes</span>
   </a>
+  <a mat-list-item routerLink="/administration/provider" *ngIf="canViewProviderModule()"
+    [ngClass]="{'menu-item-active':getCurrentRoute().indexOf('/administration/provider' )>=0}">
+    <mat-icon>factory</mat-icon> <span>Fournisseurs</span>
+  </a>
   <a mat-list-item routerLink="/quotation" *ngIf="canViewQuotationModule()"
     [ngClass]="{'menu-item-active':getCurrentRoute().indexOf('/quotation' )>=0}">
     <mat-icon>request_quote</mat-icon> <span>Devis</span>
@@ -58,7 +62,7 @@
     <mat-icon>account_balance</mat-icon> <span>Comptabilité</span>
   </a>
   <a mat-list-item routerLink="/administration" *ngIf="canViewAdministrationModule()"
-    [ngClass]="{'menu-item-active':getCurrentRoute().indexOf('/administration' )>=0 && getCurrentRoute().indexOf('/administration/competent/authority' )<0}">
+    [ngClass]="{'menu-item-active':getCurrentRoute().indexOf('/administration' )>=0 && getCurrentRoute().indexOf('/administration/competent/authority' )<0 && getCurrentRoute().indexOf('/administration/provider' )<0}">
     <mat-icon>settings</mat-icon> <span>Administration</span>
   </a>
   <a mat-list-item routerLink="/my-profil" [ngClass]="{'menu-item-active':getCurrentRoute().indexOf('/my-profil' )>=0}">
