--- a/client/src/app/modules/invoicing/components/invoice-details/invoice-details.component.html
+++ b/client/src/app/modules/invoicing/components/invoice-details/invoice-details.component.html
@@ -265,15 +265,18 @@
         <ul>
           <li [ngClass]="{'color-warn':beforeToday(invoice.dueDate)}">Echéance de paiement : {{invoice.dueDate |
             date:'dd/MM/yyyy'}}</li>
-          <li *ngIf="beforeToday(invoice.dueDate)">Relance n°1 : {{invoice.firstReminderDateTime |date:'dd/MM/yyyy'}}
+          <li *ngIf="invoice.firstReminderDateTime && beforeToday(invoice.firstReminderDateTime)">Relance n°1 :
+            {{invoice.firstReminderDateTime |date:'dd/MM/yyyy'}}
             <chips-status class="chips-reminder" [status]="beforeToday(invoice.firstReminderDateTime)?'SENT':'WAITING'"
               [value]="beforeToday(invoice.firstReminderDateTime)?'Envoyée':'En attente'"></chips-status>
           </li>
-          <li *ngIf="beforeToday(invoice.dueDate)">Relance n°2 : {{invoice.secondReminderDateTime|date:'dd/MM/yyyy'}}
+          <li *ngIf="invoice.secondReminderDateTime && beforeToday(invoice.secondReminderDateTime)">Relance n°2 :
+            {{invoice.secondReminderDateTime|date:'dd/MM/yyyy'}}
             <chips-status class="chips-reminder" [status]="beforeToday(invoice.secondReminderDateTime)?'SENT':'WAITING'"
               [value]="beforeToday(invoice.secondReminderDateTime)?'Envoyée':'En attente'"></chips-status>
           </li>
-          <li *ngIf="beforeToday(invoice.dueDate)">Relance n°3 : {{invoice.thirdReminderDateTime|date:'dd/MM/yyyy'}}
+          <li *ngIf="invoice.thirdReminderDateTime && beforeToday(invoice.thirdReminderDateTime)">Relance n°3 :
+            {{invoice.thirdReminderDateTime|date:'dd/MM/yyyy'}}
             <chips-status class="chips-reminder" [status]="beforeToday(invoice.thirdReminderDateTime)?'SENT':'WAITING'"
               [value]="beforeToday(invoice.thirdReminderDateTime)?'Envoyée':'En attente'"></chips-status>
           </li>
