--- a/client/src/app/modules/miscellaneous/components/forms/generic-autocomplete/generic-autocomplete.component.html
+++ b/client/src/app/modules/miscellaneous/components/forms/generic-autocomplete/generic-autocomplete.component.html
@@ -1,10 +1,11 @@
 <mat-form-field class="full-width" [formGroup]="form!">
   <mat-label>{{label}}</mat-label>
-  <input matInput [placeholder]="label" [matAutocomplete]="autoCompleteField" [formControlName]="propertyName"
-    autocomplete="organization-title" [required]="isMandatory">
-  <mat-icon matSuffix (click)="clearField()" *ngIf="!isDisabled && model!=undefined" class="pointer">
+  <input #inputField matInput [placeholder]="label" [matAutocomplete]="autoCompleteField"
+    [formControlName]="propertyName" autocomplete="organization-title" [required]="isMandatory">
+  <mat-icon matSuffix (click)="clearField()" *ngIf="!isDisabled && model!=undefined && !isLoading" class="pointer">
     close
   </mat-icon>
+  <mat-spinner *ngIf="isLoading" diameter="16" style="display: inline-flex" matSuffix color="accent"></mat-spinner>
   <mat-icon matTooltip="Ajouter aux notes (maintenez CTRL appuyé pour ajouter un titre)" matTooltipShowDelay="1000"
     matSuffix (click)="addToNotes($event)" *ngIf="isDisabled && model!=undefined" class="pointer note-icon">
     adjust
